Trace returning from JSOP_STOP with callDepth=0 (bug 606083, r=billm).